# openclaw-product

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  agent-platform  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
agents/education-agent/: AGENTS.md  IDENTITY.md  agent.yaml  soul.yaml
agents/legal-agent/: agent.yaml  soul.yaml
agents/loan-agent/: AGENTS.md  IDENTITY.md  agent.yaml  soul.yaml
agents/local-commerce-agent/: agent.yaml  soul.yaml
agents/news-agent/: AGENTS.md  IDENTITY.md  agent.yaml  soul.yaml
agents/photo-polisher/: agent.yaml  soul.yaml
agents/sales-agent/: AGENTS.md  IDENTITY.md  agent.yaml  soul.yaml
agents/social-media-agent/: AGENTS.md  IDENTITY.md  agent.yaml  soul.yaml
core/: README.md  env.example  从零部署-openclaw-股票版.md  安装-openclaw-本体.md
docs/: Codex安装排查说明.md  OpenClaw-Codex-OAuth修复说明.md  README.md  产品分级说明.md  产品包规范.md  产品定位与商业化思路.md  产品目录.md  初始化与人格塑造.md  场景版与客户定制版说明.md  基础版能力说明.md  安全交付规范.md  客户部署清单.md  我们与同类厂商的区别.md  技术交付SOP.md  技术交付说明.md  接入国外模型说明.md  接入微信.md  接入飞书.md  模型配置与切换.md  赠送技能清单.md  迁移与常见坑说明.md  项目结构设计.md  默认交付预设.md  默认运行规范.md
education/: README.md
examples/: 平台级演示脚本.md
installer/: README.md  agent_installer.py  bootstrap_project.py  build_package.py  docs_packager.py  sync_to_openclaw.py  validate_package.py
media/: README.md
scripts/: acceptance_check.py  apply-demo-open-defaults.sh  check-prereqs.sh  check_all_packages.py  delivery_check.py  install-pack.sh  openclaw-codex-oauth-repair.sh  quality_check.py  start-standard-devtools-chrome.sh
stocks/: README.md
(+395 files in other folders)
